force-app/main/default/objects/ASG_Marketing_Cloud__c/ASG_Marketing_Cloud__c.object-meta.xml
<CustomObject>
    <label>ASG Marketing Cloud</label>
    <nameField>
        <displayFormat>ASG-{000000000}</displayFormat>
        <label>ASG Marketing Cloud Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASG Marketing Cloud</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>