force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Ask_array_3__c.field-meta.xml
<CustomField>
    <fullName>Ask_array_3__c</fullName>
    <label>Ask array 3</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>