force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ASGMarketingCloud (.Constituent)</relationshipLabel>
    <relationshipName>ASG_Marketing_Cloud_Constituent</relationshipName>
    <type>Lookup</type>
</CustomField>