force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>Constituent_ID__c</fullName>
    <externalId>true</externalId>
    <label>Constituent ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>