force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Date_of_first_ever_gift_to_an_ASG_fund__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_ever_gift_to_an_ASG_fund__c</fullName>
    <label>Date of first ever gift to an ASG fund</label>
    <type>Date</type>
</CustomField>