force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Date_of_first_gift_to_ASG_in_curr_FY__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_gift_to_ASG_in_curr_FY__c</fullName>
    <label>Date of first gift to ASG in curr FY</label>
    <type>Date</type>
</CustomField>