force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Date_of_last_gift_to_ISU__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_gift_to_ISU__c</fullName>
    <label>Date of last gift to ISU</label>
    <type>Date</type>
</CustomField>