force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Exclude_Email_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Email_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Email Solicitation</label>
    <type>Checkbox</type>
</CustomField>