force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Exclude_Mail_Contact__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Mail_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Mail Contact</label>
    <type>Checkbox</type>
</CustomField>