force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Exclude_Mail_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Mail_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Mail Solicitation</label>
    <type>Checkbox</type>
</CustomField>