force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Exclude_Phone__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Phone</label>
    <type>Checkbox</type>
</CustomField>