force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Fund_date_of_last_gift_1__c.field-meta.xml
<CustomField>
    <fullName>Fund_date_of_last_gift_1__c</fullName>
    <label>Fund date of last gift 1</label>
    <type>Date</type>
</CustomField>