force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Fund_description_1__c.field-meta.xml
<CustomField>
    <fullName>Fund_description_1__c</fullName>
    <label>Fund description 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>