force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Fund_description_3__c.field-meta.xml
<CustomField>
    <fullName>Fund_description_3__c</fullName>
    <label>Fund description 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>