force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Fund_unit_date_of_last_gift_2__c.field-meta.xml
<CustomField>
    <fullName>Fund_unit_date_of_last_gift_2__c</fullName>
    <label>Fund unit date of last gift 2</label>
    <type>Date</type>
</CustomField>