force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/FundISU_Only__c.field-meta.xml
<CustomField>
    <fullName>FundISU_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FundISU Only?</label>
    <type>Checkbox</type>
</CustomField>