force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Gift_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Gift_ID_2__c</fullName>
    <label>Gift ID 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>