force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Graduate_degree_college_3__c.field-meta.xml
<CustomField>
    <fullName>Graduate_degree_college_3__c</fullName>
    <label>Graduate degree college 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>