force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Graduate_degree_major_2__c.field-meta.xml
<CustomField>
    <fullName>Graduate_degree_major_2__c</fullName>
    <label>Graduate degree major 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>