force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Graduate_degree_type_1__c.field-meta.xml
<CustomField>
    <fullName>Graduate_degree_type_1__c</fullName>
    <label>Graduate_degree_type_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>