force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Hixson_scholarship_recipient__c.field-meta.xml
<CustomField>
    <fullName>Hixson_scholarship_recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hixson scholarship recipient?</label>
    <type>Checkbox</type>
</CustomField>