force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Honors_participants__c.field-meta.xml
<CustomField>
    <fullName>Honors_participants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Honors participants</label>
    <type>Checkbox</type>
</CustomField>