force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Is_Band_alumni__c.field-meta.xml
<CustomField>
    <fullName>Is_Band_alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Band alumni?</label>
    <type>Checkbox</type>
</CustomField>