force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Is_Compassionate_Vet_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Compassionate_Vet_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Compassionate/Vet Client?</label>
    <type>Checkbox</type>
</CustomField>