force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Is_current_student__c.field-meta.xml
<CustomField>
    <fullName>Is_current_student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is current student?</label>
    <type>Checkbox</type>
</CustomField>