force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Is_faculty_or_staff__c.field-meta.xml
<CustomField>
    <fullName>Is_faculty_or_staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is faculty or staff?</label>
    <type>Checkbox</type>
</CustomField>