force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Is_managed__c.field-meta.xml
<CustomField>
    <fullName>Is_managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is managed?</label>
    <type>Checkbox</type>
</CustomField>