force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Is_managed_by_Priority_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Is_managed_by_Priority_Initiatives__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is managed by Priority Initiatives?</label>
    <type>Checkbox</type>
</CustomField>