force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Is_non_graduate_attendee__c.field-meta.xml
<CustomField>
    <fullName>Is_non_graduate_attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is non graduate attendee?</label>
    <type>Checkbox</type>
</CustomField>