force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Last_Amt_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Amt_3__c</fullName>
    <label>Last Amt 3</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>