force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Last_Fund_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Fund_3__c</fullName>
    <label>Last Fund 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>