force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Last_Fund_Title_1__c.field-meta.xml
<CustomField>
    <fullName>Last_Fund_Title_1__c</fullName>
    <label>Last Fund Title 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>