force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Received_any_scholarship_s__c.field-meta.xml
<CustomField>
    <fullName>Received_any_scholarship_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received any scholarship(s)</label>
    <type>Checkbox</type>
</CustomField>