force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Undergrad_degree_college_2__c.field-meta.xml
<CustomField>
    <fullName>Undergrad_degree_college_2__c</fullName>
    <label>Undergrad degree college 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>