force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Undergrad_degree_department_3__c.field-meta.xml
<CustomField>
    <fullName>Undergrad_degree_department_3__c</fullName>
    <label>Undergrad degree department 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>