force-app/main/default/objects/ASG_Marketing_Cloud__c/fields/Undergrad_degree_year_3__c.field-meta.xml
<CustomField>
    <fullName>Undergrad_degree_year_3__c</fullName>
    <label>Undergrad degree year 3</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>